# onebot-api

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO_LIST.md  skills-lock.json
.github/workflows/: publish-crate.yml  publish-release.yml
changelogs/: 2026-05-29.md  2026-05-30.md  2026-05-31.md  2026-06-01.md  2026-06-02.md  2026-06-03.md  2026-06-06.md  2026-06-07.md
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
examples/communication/: Cargo.toml
examples/communication/src/: main.rs
macros/: Cargo.toml
macros/docs/: api_sender.md  selector.md
macros/src/: lib.rs  selector.rs
macros/tests/: test_api_sender.rs
mock/mock/: http.ts  http_post.ts  sse.ts  ws.ts  ws_reverse.ts
mock/server/: index.ts  server.ts  types.ts
mock/server/docs/: README.md
mock/server/services/: http.ts  http_post.ts  mod.ts  shared.ts  sse.ts  ws.ts  ws_reverse.ts
scripts/: publish-release.ts
src/: api.rs  communication.rs  error.rs  event.rs  extension.rs  lib.rs  message.rs  quick_operation.rs  selector.rs
src/api/: arg_type.rs  return_type.rs
src/communication/: combiner.rs  communication_utils.rs  decorator.rs  http.rs  http_post.rs  sse.rs  utils.rs  ws.rs  ws_reverse.rs  ws_utils.rs
src/communication/ws/: ws_transfer.rs
src/communication/ws_reverse/: transfer.rs
src/event/: message.rs  meta.rs  notice.rs  request.rs
src/extension/go_cqhttp/: api.rs  return_type.rs
src/message/: receive_segment.rs  segment.rs  segment_builder.rs  send_segment.rs  signal_segment_builder.rs  utils.rs
tests/: http_post.rs  ws_reverse.rs
(+2 files in other folders)
