[package]
name = "onebot-api-macros"
version = "0.1.2"
edition = "2024"
description = "Proc macros for onebot-api"
license = "MIT"
authors = ["Ecamika <ecamika@outlook.com>"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.117", features = ["full"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"

[dev-dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
